// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLoader component should have a proper style generator 1`] = `
{
  "appLoader": {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "test1": "test1",
    "test2": "test2",
    "test3": "test3",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": {
    "width": 200,
  },
  "spaceBetween": {
    "margin": "16px 0",
  },
  "white": {
    "color": "test4",
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 2`] = `
{
  "appLoader": {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": {
    "width": 200,
  },
  "spaceBetween": {
    "margin": "16px 0",
  },
  "white": {
    "color": "test4",
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 3`] = `
{
  "appLoader": {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": {
    "width": 200,
  },
  "spaceBetween": {
    "margin": "16px 0",
  },
  "white": {
    "color": undefined,
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 4`] = `
{
  "appLoader": {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": {
    "width": 200,
  },
  "spaceBetween": {
    "margin": "16px 0",
  },
  "white": {
    "color": undefined,
    "fontWeight": undefined,
  },
}
`;
